feat: enhance LoginModal with lazy loading for images and preload key assets in index.html

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -9,6 +9,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
+
     <meta name="google-adsense-account" content="ca-pub-4475318931700230">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -16,6 +17,27 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="preload" as="image" href="/login.png">
+    <link rel="preload" as="image" href="/agota.png">
+    <link rel="preload" as="image" href="/burger.png">
+    <link rel="preload" as="image" href="/code.png">
+    <link rel="preload" as="image" href="/deletee.png">
+    <link rel="preload" as="image" href="/eye.png">
+    <link rel="preload" as="image" href="/customize.svg">
+    <link rel="preload" as="image" href="/copy.png">
+    <link rel="preload" as="image" href="/google-icon.png">
+    <link rel="preload" as="image" href="/github2.png">
+    <link rel="preload" as="image" href="/star.png">
+    <link rel="preload" as="image" href="/star-filled.png">
+    <link rel="preload" as="image" href="/sparkle.svg">
+    <link rel="preload" as="image" href="/right-arrow.svg">
+    <link rel="preload" as="image" href="/right-arrow.png">
+    <link rel="preload" as="image" href="/undo.svg">
+    <link rel="preload" as="image" href="/share.png">
+    <link rel="preload" as="image" href="/preview.png">
+    <link rel="preload" as="image" href="/private.png">
+
+
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
