--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Prompt. Generate. Launch. Instant websites."
     />
 
     <meta name="google-adsense-account" content="ca-pub-4475318931700230">
@@ -47,7 +47,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Kriti 2025</title>
+    <title>Ogata</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
