fix: update preload link for GitHub icon from PNG to SVG format

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -26,7 +26,7 @@
     <link rel="preload" as="image" href="/customize.svg">
     <link rel="preload" as="image" href="/copy.png">
     <link rel="preload" as="image" href="/google-icon.png">
-    <link rel="preload" as="image" href="/github2.png">
+    <link rel="preload" as="image" href="/github2.svg">
     <link rel="preload" as="image" href="/star.png">
     <link rel="preload" as="image" href="/star-filled.png">
     <link rel="preload" as="image" href="/sparkle.svg">
