feat: add deploy routes and model for managing deployed websites; include new images and preload links

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -30,6 +30,11 @@
     <link rel="preload" as="image" href="/star.png">
     <link rel="preload" as="image" href="/star-filled.png">
     <link rel="preload" as="image" href="/sparkle.svg">
+    <link rel="preload" as="image" href="/sparkle.png">
+    <link rel="preload" as="image" href="/attach.png">
+    <link rel="preload" as="image" href="/link.png">
+    <link rel="preload" as="image" href="/open.png">
+    <link rel="preload" as="image" href="/placeholder.png">
     <link rel="preload" as="image" href="/right-arrow.svg">
     <link rel="preload" as="image" href="/right-arrow.png">
     <link rel="preload" as="image" href="/undo.svg">
