fix: add preload link for setting image in index.html

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -41,6 +41,7 @@
     <link rel="preload" as="image" href="/share.png">
     <link rel="preload" as="image" href="/preview.png">
     <link rel="preload" as="image" href="/private.png">
+    <link rel="preload" as="image" href="/setting.png">
 
 
     <!--
