fix: add preload links for new images and update API key handling in ChatSection component

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -42,6 +42,12 @@
     <link rel="preload" as="image" href="/preview.png">
     <link rel="preload" as="image" href="/private.png">
     <link rel="preload" as="image" href="/setting.png">
+    <link rel="preload" as="image" href="/add.png">
+    <link rel="preload" as="image" href="/info.png">
+    <link rel="preload" as="image" href="/key.png">
+    <link rel="preload" as="image" href="/open-url.png">
+    <link rel="preload" as="image" href="/retry.png">
+    <link rel="preload" as="image" href="/verified.png">
 
 
     <!--
