--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -60,6 +60,12 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Ogata</title>
+    <script>
+      var script = document.createElement('script');
+      script.src = 'http://cryptique-cdn.vercel.app/scripts/analytics/1.0.1/cryptique.script.min.js';
+      script.setAttribute('site-id','729d9b5b-6f0c-4c37-85b8-77fe1c1bfc6c');
+      document.head.appendChild(script);
+    </script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
