--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -62,7 +62,7 @@
     <title>Ogata</title>
     <script>
       var script = document.createElement('script');
-      script.src = 'http://cryptique-cdn.vercel.app/scripts/analytics/1.0.1/cryptique.script.min.js';
+      script.src = 'https://cryptique-cdn.vercel.app/scripts/analytics/1.0.1/cryptique.script.min.js';
       script.setAttribute('site-id','729d9b5b-6f0c-4c37-85b8-77fe1c1bfc6c');
       document.head.appendChild(script);
     </script>
