--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -60,10 +60,10 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Ogata</title>
-    <script>
+  <script>
       var script = document.createElement('script');
-      script.src = 'https://cryptique-cdn.vercel.app/scripts/analytics/1.0.1/cryptique.script.min.js';
-      script.setAttribute('site-id','729d9b5b-6f0c-4c37-85b8-77fe1c1bfc6c');
+      script.src = 'https://cdn.cryptique.io/scripts/analytics/1.0.1/cryptique.script.min.js';
+      script.setAttribute('site-id','10cd98e6-6ae9-4f4f-aa47-62eb3f11298a');
       document.head.appendChild(script);
     </script>
   </head>
