--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -60,10 +60,10 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Ogata</title>
-  <script>
+<script>
       var script = document.createElement('script');
-      script.src = 'https://cdn.cryptique.io/scripts/analytics/1.0.1/cryptique.script.min.js';
-      script.setAttribute('site-id','bd99de1e-be58-4691-946c-3e586462bcf2');
+      script.src = 'https://cryptique-cdn.vercel.app/scripts/analytics/1.0.1/cryptique.script.min.js';
+      script.setAttribute('site-id','53d7a971-4fbc-450b-b774-3c079a3f88e5');
       document.head.appendChild(script);
     </script>
   </head>
