--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -62,8 +62,8 @@
     <title>Ogata</title>
 <script>
       var script = document.createElement('script');
-      script.src = 'https://cryptique-cdn.vercel.app/scripts/analytics/1.0.1/cryptique.script.min.js';
-      script.setAttribute('site-id','53d7a971-4fbc-450b-b774-3c079a3f88e5');
+      script.src = 'http://cdn.cryptique.io/scripts/analytics/1.0.1/cryptique.script.min.js';  
+      script.setAttribute('site-id', '71a5f18e-4a63-4acc-be0c-5148618b3f4b');
       document.head.appendChild(script);
     </script>
   </head>
