--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -62,7 +62,7 @@
     <title>Ogata</title>
 <script>
       var script = document.createElement('script');
-      script.src = 'http://cdn.cryptique.io/scripts/analytics/1.0.1/cryptique.script.min.js';  
+      script.src = 'https://cdn.cryptique.io/scripts/analytics/1.0.1/cryptique.script.min.js';  
       script.setAttribute('site-id', '71a5f18e-4a63-4acc-be0c-5148618b3f4b');
       document.head.appendChild(script);
     </script>
