--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -62,7 +62,7 @@
     <title>Ogata</title>
 <script>
       var script = document.createElement('script');
-      script.src = 'http://cdn.cryptique.io/scripts/analytics/1.0.1/cryptique.script.min.js';  
+      script.src = 'https://cdn.cryptique.io/scripts/analytics/1.0.1/cryptique.script.min.js';  
       script.setAttribute('site-id', '2d5e7dc2-c70c-42ac-9e10-399182873d9d');
       document.head.appendChild(script);
     </script>
